Use default groups, add formatter and linter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,13 +78,13 @@ angr = "angr.__main__:main"
 
 [dependency-groups]
 dev = [
-    "keystone-engine>=0.9.2",
+    "black>=25.1.0",
     "pytest>=8.3.5",
     "pytest-durations>=1.4.0",
     "pytest-profiling>=1.8.1",
     "pytest-timeout>=2.3.1",
     "pytest-xdist>=3.6.1",
-    "sqlalchemy>=2.0.40",
+    "ruff>=0.11.7",
 ]
 
 [tool.setuptools]
@@ -103,6 +103,9 @@ angr = [
 
 [tool.setuptools.dynamic]
 version = {attr = "angr.__version__"}
+
+[tool.uv]
+default-groups = ["angrdb", "pcode", "unicorn"]
 
 [tool.uv.sources]
 archinfo = { git = "https://github.com/angr/archinfo.git", branch = "master" }
