--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "sympy",
     "unique-log-filter",
     "colorama;platform_system=='Windows'",
+    "icicle-emu>=0.0.10",
 ]
 dynamic = ["version"]
 
