--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,7 +9,7 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
-    rust: "1.86"
+    rust: latest
   jobs:
     post_create_environment:
       - pip install uv
