--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - uses: ilammy/msvc-dev-cmd@v1
+        if: startsWith(runner.os, 'windows')
       - uses: astral-sh/setup-uv@v6
       - name: Sync dependencies
         run: uv sync -p 3.10
