Use asdf to install rust

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,8 +9,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
-    rust: latest
   jobs:
     post_create_environment:
+      - asdf install rust
       - pip install uv
       - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs
