--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,6 +11,6 @@ build:
     python: "3.10"
   jobs:
     post_create_environment:
-      - asdf install rust
+      - asdf install rust latest
       - pip install uv
       - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs
