Also set the rust version globally

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,5 +12,6 @@ build:
   jobs:
     post_create_environment:
       - asdf install rust latest
+      - asdf global rust latest
       - pip install uv
       - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs
