Add Rust SegmnentList implementation (#5434)
* Add experimental Rust SegmnentList implementation

* Add rust to RTD environment

* Fix cargo check

* Add update method to avoid ._list

* Change rust version to latest

* Fix some inconsistencies with original implementation

* Fix iterator

* Fix lint issues

* Disable setuptools_rust check in setup.py

* Fix import

* Use asdf to install rust

* Specify latest version

* Also set the rust version globally

* Revert "Disable setuptools_rust check in setup.py"

This reverts commit 0fd2a4b61cdc82a776f4bee71cf85c39c7b97e6f.

* Add a note about rust in the docs

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,5 +11,7 @@ build:
     python: "3.10"
   jobs:
     post_create_environment:
+      - asdf install rust latest
+      - asdf global rust latest
       - pip install uv
       - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs
