--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ dev = [
     "pytest>=8.3.5",
     "pytest-durations>=1.4.0",
     "pytest-profiling>=1.8.1",
+    "pytest-split>=0.10.0",
     "pytest-timeout>=2.3.1",
     "pytest-xdist>=3.6.1",
     "ruff>=0.11.7",
