--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,6 @@ Repository = "https://github.com/angr/angr"
 
 [project.optional-dependencies]
 angrdb = ["sqlalchemy"]
-pcode = ["pypcode~=3.0"]
 keystone = ["keystone-engine"]
 telemetry = ["opentelemetry-api"]
 unicorn = ["unicorn==2.0.1.post1"]
@@ -72,7 +71,7 @@ dev = [
     "ruff>=0.11.7",
 ]
 docs = ["furo", "myst-parser", "sphinx", "sphinx-autodoc-typehints"]
-extras = ["angr[angrdb,keystone,pcode]"]
+extras = ["angr[angrdb,keystone]"]
 
 [tool.setuptools]
 include-package-data = true
