--- a/crates/angr/Cargo.toml
+++ b/crates/angr/Cargo.toml
@@ -10,6 +10,6 @@ crate-type = ["cdylib"]
 [dependencies]
 icicle-vm = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 pcode = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
-pyo3 = { version = "0.24.2", features = ["extension-module", "py-clone", "abi3"] }
+pyo3 = { version = "0.24.2", features = ["extension-module", "py-clone", "abi3-py310"] }
 rangemap = "1.5.1"
 target-lexicon = "0.12.16"
