--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include LICENSE
 include README.md
-recursive-include native *.c *.cpp *.h *.hpp *.def Makefile Makefile-win
 include Cargo.toml
 include Cargo.lock
-graft crates
+graft native
