--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.2", "setuptools-rust", "pyvex==9.2.163.dev0"]
+requires = ["setuptools>=61.2", "setuptools-rust", "pybind11>=2.13.6,<3", "pyvex==9.2.163.dev0"]
 build-backend = "setuptools.build_meta"
 
 [project]
