--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "angr"
 description = "A multi-architecture binary analysis toolkit, with the ability to perform dynamic symbolic execution and various static analyses on binaries"
-license = "BSD-2-Clause"
+license = { text = "BSD-2-Clause" }
 license-files = ["COPYRIGHT", "LICENSE"]
 classifiers = [
     "Programming Language :: Python :: 3",
