--- a/native/angr/Cargo.toml
+++ b/native/angr/Cargo.toml
@@ -12,4 +12,5 @@ icicle-vm = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed
 pcode = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 pyo3 = { version = "0.24.2", features = ["extension-module", "py-clone", "abi3-py310"] }
 rangemap = "1.5.1"
+send_wrapper = "0.6.0"
 target-lexicon = "0.12.16"
