--- a/tests/perf/.perfharness.ini
+++ b/tests/perf/.perfharness.ini
@@ -1,6 +1,6 @@
 [perfharness]
 sources_root = ../../..
-sources = angr/angr,angr/angr_native,pyvex/pyvex,pyvex/pyvex_c,archinfo/archinfo,claripy/claripy,cle/cle,ailment/ailment
+sources = angr/angr,angr/native,pyvex/pyvex,pyvex/native,archinfo/archinfo,claripy/claripy,claripy/native,cle/cle
 sources_ignore = *.o,*.so,*.a,*.pyc
 build = pip install -e ./angr -e ./pyvex
 cpu_percent_less_than = 10
