Try pytest marker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -157,3 +157,12 @@ ignore = [
 
 [tool.ruff.lint.isort]
 required-imports = ["from __future__ import annotations"]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+markers = [
+    "slow: mark test as too slow to run in every CI run",
+]
+testpaths = [
+    "tests",
+]
