--- a/native/angr/Cargo.toml
+++ b/native/angr/Cargo.toml
@@ -8,6 +8,7 @@ name = "rustylib"
 crate-type = ["cdylib"]
 
 [dependencies]
+icicle-fuzzing = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 icicle-vm = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 pcode = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 pyo3 = { version = "0.24.2", features = ["extension-module", "py-clone", "abi3-py310"] }
