--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build
         run: uv sync -v -p 3.10 --all-groups
       - name: Archive environment
-        run: tar -cpf /tmp/env.tzst --absolute-names --zstd $PWD $HOME/.local/share/uv
+        run: tar -cpf /tmp/env.tzst --absolute-names --zstd $PWD $UV_CACHE_DIR $UV_PYTHON_INSTALL_DIR
       - name: Upload environment artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
@@ -43,11 +43,6 @@ jobs:
       matrix:
         runner_id: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
     steps:
-      - uses: astral-sh/setup-uv@3259c6206f993105e3a61b142c2d97bf4b9ef83d # v6
-        with:
-          python-version: "3.10"
-          enable-cache: false
-          ignore-empty-workdir: true
       - uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
         with:
           name: env
