--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ angr = "angr.__main__:main"
 dev = [
     "black>=25.1.0",
     "coverage>=7.10.7",
+    "gcovr>=8.4",
     "pytest>=8.3.5",
     "pytest-cov>=7.0.0",
     "pytest-durations>=1.4.0",
