--- a/native/angr/Cargo.toml
+++ b/native/angr/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 icicle-fuzzing = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 icicle-vm = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 pcode = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
-pyo3 = { git = "https://github.com/pyo3/pyo3", version = "0.26.0", features = ["py-clone", "abi3-py310"] }
+pyo3 = { version = "0.27.1", features = ["py-clone", "abi3-py310"] }
 rangemap = "1.6.0"
 send_wrapper = "0.6.0"
 target-lexicon = "0.12.16"
