--- a/native/unicornlib/Makefile-win
+++ b/native/unicornlib/Makefile-win
@@ -3,6 +3,6 @@ INCFLAGS=/I "$(PYVEX_INCLUDE_PATH)" /I vendor
 CFLAGS=/EHsc /MD /LD /O2 $(INCFLAGS) /Zi
 LDFLAGS=/link "$(PYVEX_LIB_FILE)" /DEF:unicornlib.def /DEBUG
 
-unicornlib.dll: sim_unicorn.cpp unicornlib.def
+unicornlib.dll: sim_unicorn.cpp procedures.cpp unicornlib.def
 	$(CC) $(CFLAGS) sim_unicorn.cpp procedures.cpp unicorn_dynamic.c $(LDFLAGS) /OUT:unicornlib.dll
 
