--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -165,12 +165,13 @@ jobs:
           verbose: true
           files: ${{ steps.files.outputs.coverage }}
       - name: Upload test results to Codecov
-        uses: codecov/test-results-action@0fa95f0e1eeaafde2c782583b36b28ad0d8c77d3 # v1
+        uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5
         with:
           use_oidc: true
           fail_ci_if_error: true
           verbose: true
           files: ${{ steps.files.outputs.junit }}
+          report_type: test_results
       - name: Combine test durations
         run: jq -Ss 'add' results/**/test_durations.json > test_durations.json
       - name: Upload combined test durations artifact
