--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,11 +55,13 @@ Repository = "https://github.com/angr/angr"
 [project.optional-dependencies]
 angrdb = ["sqlalchemy"]
 keystone = ["keystone-engine"]
+mcp = ["mcp>=1.0.0"]
 telemetry = ["opentelemetry-api"]
 unicorn = ["unicorn==2.0.1.post1", "setuptools"]
 
 [project.scripts]
 angr = "angr.__main__:main"
+angr-mcp = "angr.mcp.__main__:main"
 
 [dependency-groups]
 dev = [
