--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "networkx!=2.8.1,>=2.0",
     "protobuf>=6.33.0",
     "psutil",
-    "pycparser>=2.18",
+    "pycparser>=2.18,<3.0",
     "pydemumble",
     "pyformlang",
     "pypcode>=3.2.1,<4.0",
