--- a/native/angr/Cargo.toml
+++ b/native/angr/Cargo.toml
@@ -11,8 +11,8 @@ crate-type = ["cdylib"]
 backtrace = "0.3.76"
 icicle-fuzzing = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 icicle-vm = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
-libafl = { version = "0.15.4" }
-libafl_bolts = { version = "0.15.4" }
+libafl = { version = "=0.15.3" }
+libafl_bolts = { version = "=0.15.3" }
 pcode = { git = "https://github.com/icicle-emu/icicle-emu.git", rev = "4d7ed93254a20b7e5c16bd7b0c6b46db49e1c72e" }
 postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
 pyo3 = { version = "0.27.2", features = ["py-clone"] }
