--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ Repository = "https://github.com/angr/angr"
 angrdb = ["sqlalchemy"]
 keystone = ["keystone-engine"]
 telemetry = ["opentelemetry-api"]
-unicorn = ["unicorn==2.0.1.post1", "setuptools"]
+unicorn = ["unicorn==2.1.4"]
 
 [project.scripts]
 angr = "angr.__main__:main"
