--- a/native/angr/Cargo.toml
+++ b/native/angr/Cargo.toml
@@ -18,6 +18,8 @@ postcard = { version = "1.1.3", default-features = false, features = ["use-std"]
 pyo3 = { version = "0.28.0", features = ["py-clone"] }
 rangemap = "1.7.1"
 send_wrapper = "0.6.0"
+indexmap = "2.2"
+fixedbitset = "0.5"
 serde = { version = "1.0.228", features = ["derive"] }
 target-lexicon = "0.12.16"
 
