--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,14 +64,10 @@ repos:
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.14.14
     hooks:
-    - id: ruff
+    - id: ruff-check
       args: [--fix, --exit-non-zero-on-fix]
-
-# Last modifier: Coding Standard
--   repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 26.1.0
-    hooks:
-    -   id: black
+    - id: ruff-format
+      types_or: [python, pyi]
 
 #
 # Static Checks
